refactor: CRUD operations in separate file
