# app/swagger/swagger.json
@@ -27,10 +27,10 @@
       "application/json"
     ],
     "paths": {
-      "/add": {
+      "/register": {
         "post": {
           "tags": [
-            "Add Details"
+            "Users"
           ],
           "description": "Create new contact in system",
           "parameters": [
@@ -39,7 +39,7 @@
               "in": "body",
               "description": "contact that we want to create",
               "schema": {
-                "$ref": "#/definitions/add"
+                "$ref": "#/definitions/register"
               }
             }
           ],
@@ -67,7 +67,7 @@
       "/login": {
         "post": {
           "tags": [
-            "login"
+            "Users"
           ],
           "description": "login user in system",
           "parameters": [
@@ -105,9 +105,49 @@
           ]
         }
       },
+      "/create": {
+        "post": {
+          "tags": [
+            "Users"
+          ],
+          "description": "Create new user in system",
+          "parameters": [
+            {
+              "name": "createEmp",
+              "in": "body",
+              "description": "User that we want to create",
+              "schema": {
+                "$ref": "#/definitions/create"
+              }
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "schema": {
+            "$ref": "#/definitions/create"
+          },
+          "responses": {
+            "200": {
+              "description": "New user is created"
+            },
+            
+            "400": {
+              "description": "Bad Request"
+            },
+            
+            "500": {
+              "description": "Internal server error"
+            }
+          },
+          "security":[{
+            "JWT" :[]
+          }]
+        }
+      },
       "/read": {
         "get": {
-          "tags": ["read"],
+          "tags": ["Users"],
           "description": "read user data from system",
           "parameters": [],
           "produces": [
@@ -141,7 +181,7 @@
       "/read/{:_id}": {
         "get": {
           "tags": [
-            "readById"
+            "Users"
           ],
           "description": "read user data by id from system",
           "parameters": [
@@ -179,7 +219,7 @@
       "/update/{:_id}": {
         "put": {
           "tags": [
-            "updateById"
+            "Users"
           ],
           "description": "update user data by id from system",
           "parameters": [
@@ -194,7 +234,7 @@
               "in": "body",
               "required": true,
               "schema": {
-                "$ref": "#/definitions/register"
+                "$ref": "#/definitions/update"
               }
             }
           ],
@@ -225,7 +265,7 @@
       "/delete/{:_id}": {
         "delete": {
           "tags": [
-            "deleteById"
+            "Users"
           ],
           "description": "delete user data by id from system",
           "parameters": [
@@ -262,7 +302,38 @@
       }
     },
     "definitions": {
-      "add": {
+      "register": {
+        "type": "object",
+        "properties": {
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          },
+          "confirmPassword": {
+            "type": "string"
+          }
+        }
+      },
+      "login": {
+        "type": "object",
+        "properties": {
+          "email" : {
+            "type" :"string"
+          },
+        "password": {
+          "type": "string"
+          }
+        }
+      },
+      "create": {
         "type": "object",
         "properties": {
           "fullName": {
@@ -285,20 +356,33 @@
           },
           "zip": {
             "type": "string"
-          },
-          "password": {
-            "type": "string"
           }
         }
       },
-      "login": {
+       
+      "update": {
         "type": "object",
         "properties": {
-          "email" : {
-            "type" :"string"
+          "fullName": {
+            "type": "string"
           },
-        "password": {
-          "type": "string"
+          "address": {
+            "type": "string"
+          },
+          "city": {
+            "type": "string"
+          },
+          "state": {
+            "type": "string"
+          },
+          "phone": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "zip": {
+            "type": "string"
           }
         }
       } 
